# joinPhotos

./: .gitignore  CMakeLists.txt  Makefile  PlugData_vazao_45_massa_0.3.txt  README.md  cmake_install.cmake  folders.txt  joinImages  joinImages.cpp  multiple_folders.sh  plugMeasures  process_folder.sh  process_folder_bi.sh  waveMeasures  wave_multiple_folders.sh  wave_process_folder.sh
Files/: characteristics.txt  plug_1.txt  plug_10.txt  plug_11.txt  plug_12.txt  plug_13.txt  plug_14.txt  plug_15.txt  plug_16.txt  plug_17.txt  plug_18.txt  plug_2.txt  plug_3.txt  plug_4.txt  plug_5.txt  plug_6.txt  plug_7.txt  plug_8.txt  plug_9.txt  plugs.txt
Results/: PlugData_vazao_.5_massa_0.2_angulo_.txt  PlugData_vazao_40_massaVidro_0.2_massaZirc_0.4_angulo_0.txt  PlugData_vazao_40_massaVidro_0.2_massaZirc_0.5_angulo_0.txt  PlugData_vazao_40_massaVidro_0.2_massaZirc_0.5_angulo_15.txt  PlugData_vazao_40_massaVidro_0.2_massaZirc_0.7_angulo_0.txt  PlugData_vazao_40_massaVidro_0.2_massaZirc_0.7_angulo_15.txt  PlugData_vazao_40_massaVidro_0.3_massaZirc_0.4_angulo_0.txt  PlugData_vazao_40_massaVidro_0.3_massaZirc_0.4_angulo_15.txt  PlugData_vazao_40_massaVidro_0.3_massaZirc_0.5_angulo_0.txt  PlugData_vazao_40_massaVidro_0.3_massaZirc_0.7_angulo_0.txt  PlugData_vazao_40_massaVidro_0.3_massaZirc_0.7_angulo_15.txt  PlugData_vazao_40_massa_0.3.txt  PlugData_vazao_40_massa_0.3_angulo_0graus.txt  PlugData_vazao_40_massa_0.3_angulo_15graus.txt  PlugData_vazao_40_massa_0.3_angulo_30graus.txt  PlugData_vazao_40_massa_0.5.txt  PlugData_vazao_40_massa_0.5_angulo_0graus.txt  (+115 more)
src/: joinImages.cpp  (+2 more)
